--- a/profile.html
+++ b/profile.html
@@ -133,6 +133,7 @@
             <div class="skill-card">Web Dev</div>
             <div class="skill-card">AI/ML</div>
             <div class="skill-card">Game Dev</div>
+            <div class="skill-card">Mobile/Android Development</div>
         </div>
     </div>
 </body>
