--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,7 @@
     <title>
         Yashir Khan
     </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial;
@@ -12,7 +13,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
+            overflow-y: auto;
+            padding: 1rem;
+            margin: 0;
         }
 
         .card {
@@ -21,10 +25,13 @@
             border-radius: 15px;
             text-align: center;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 70vw;
         }
 
         .card img {
-            width: 120px;
+            width: 100%;
+            max-width: 120px;
             border-radius: 50%;
         }
 
@@ -56,7 +63,8 @@
             margin: 8px;
             flex-direction: row;
             flex-wrap: wrap;
-            width: 180px;
+            width: 100%;
+            max-width: 180px;
             text-align: center;
             align-items: center;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -69,7 +77,8 @@
         }
 
         .socialcard img {
-            width: 20%;
+            width: 100%;
+            max-width: 36px;
             border-radius: 10%;
             padding-right: 8px;
         }
@@ -77,6 +86,10 @@
         .socialcard {
             font: Arial;
             text-align: center;
+        }
+
+        .socialcard a {
+            color: black;
         }
 
         .skills {
@@ -92,7 +105,8 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-            width: 150px;
+            width: 100%;
+            max-width: 150px;
             text-align: center;
             font-weight: bold;
             transition: transform 0.3s;
@@ -101,6 +115,27 @@
         .skill-card:hover {
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
             transform: scale(1.05);
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+                font-size: 16px;
+            }
+
+            .socialrow {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .skills {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .skill-card {
+                width: 90%;
+            }
         }
     </style>
     <script>
