--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: Arial;
-            background: #eef2f3;
+            background: rgb(32, 32, 32);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -20,13 +20,13 @@
         }
 
         .card {
-            background: white;
+            background: rgb(228, 228, 228);
             padding: 30px;
             border-radius: 15px;
             text-align: center;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 70vw;
+            max-width: 60vw;
         }
 
         .card img {
@@ -37,6 +37,7 @@
 
         .card h2 {
             color: #0057e7;
+
         }
 
         .card a {
@@ -101,15 +102,20 @@
         }
 
         .skill-card {
-            background: white;
-            padding: 20px;
+            background: transparent;
+            padding: 10px;
             border-radius: 10px;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 150px;
+            max-width: 180px;
+            height: 100%;
+            max-height: 100px;
             text-align: center;
             font-weight: bold;
+            align-items: center;
             transition: transform 0.3s;
+            border: 1px solid black;
+            flex-wrap: wrap;
         }
 
         .skill-card:hover {
@@ -140,7 +146,7 @@
     </style>
     <script>
         function thank() {
-            alert("Thanks for Visiting!!")
+            alert("Thanks for Visiting!!");
         }
     </script>
 </head>
@@ -154,21 +160,21 @@
         <div class="socialrow">
             <div class="socialcard">
                 <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" alt="Yashir's GitHub" />
-                <a href="https://github.com/yashir5686">GitHub/yashir5686</a>
+                <a href="https://github.com/yashir5686" target="_blank">GitHub/yashir5686</a>
             </div>
             <div class="socialcard">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/500px-LinkedIn_logo_initials.png"
                     alt="Yashir's LinkedIn" />
-                <a href="https://www.linkedin.com/in/yashir-khan-b3934a221/">LinkedIn/yashir</a>
+                <a href="https://www.linkedin.com/in/yashir-khan-b3934a221/" target="_blank">LinkedIn/yashir</a>
             </div>
         </div>
         <h2 style="color: black;">My Skills</h2>
         <div class="skills">
-            <div class="skill-card">Python</div>
-            <div class="skill-card">Web Dev</div>
-            <div class="skill-card">AI/ML</div>
-            <div class="skill-card">Game Dev</div>
-            <div class="skill-card">Mobile/Android Development</div>
+            <div class="skill-card" id="pythoncard">Python</div>
+            <div class="skill-card" id="webdevcard">Web Dev</div>
+            <div class="skill-card" id="aimlcard">AI/ML</div>
+            <div class="skill-card" id="gamedevcard">Game Dev</div>
+            <div class="skill-card" id="mobilecard">Mobile Development</div>
         </div>
     </div>
 </body>
